@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.youtube" name="YouTube" version="5.4.3~alpha1" provider-name="bromix">
+<addon id="plugin.video.youtube" name="YouTube" version="5.4.3~alpha2" provider-name="bromix">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0"/>
         <import addon="script.module.requests" version="2.12.4"/>
@@ -11,8 +11,9 @@
 	<extension point="xbmc.python.module" library="resources/lib/" />
 	<extension point="xbmc.addon.metadata">
         <news>
-[add] mpeg-dash support for live content (requires inputstream.adaptive >= 2.0.11)
+[add] mpeg-dash support for live content (requires inputstream.adaptive >= 2.0.12)
 [fix/upd] add My Subscriptions (Filtered) to dual login requirements
+[upd] Greek strings [Twilight0]
         </news>
         <assets>
             <icon>icon.png</icon>
